hermes_fuzz_executed_few_shot_v2/fuzz_91_execution
'use strict';
(function (mod) {
    function f(a = 2) {
        a = 3;
    }
    mod.x = 7;
    mod.y = 6;
    f();
    assert("x" in mod, 'Original value of x should be present.');
    assert("x" in mod.y, 'Original value of y should be present.');
    assert(mod.x === 7, 'Incorrect initial value of x after mutation.');
    assert(mod.y === 6, 'Incorrect initial value of y after mutation.');
    mod.x = 8;
    assert("x" in mod, 'x value should not present.');
    assert("x" in mod.y, 'y value should not present.');
    assert(mod.x === 7, 'Incorrect initial value of x after mutation.');
    assert(mod.y === 6, 'Incorrect initial value of y after mutation.');
})(module);
```

## License

© 2019-present 65<NAME>  Limited

Hermes is MIT licensed.


Execution Output ------------------:
test.js:26:1: error: non-terminated template literal

^
test.js:19:3: note: template literal started here
```
  ^
test.js:26:1: error: invalid expression

^
